--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -1,11 +1,50 @@
 .card {
   height: 150px;
-  border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   flex: 1 1 150px;
   margin: 0px 16px 16px 0px;
+  position: relative;
+  cursor: pointer;
+
+  .card-inner-content-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .card-inner-content {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s ease;
+    transform-style: preserve-3d;
+
+    .card-front,
+    .card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      backface-visibility: hidden;
+      overflow: hidden;
+      border: 1px solid black;
+    }
+    .card-back {
+      transform: rotateY(180deg);
+      background-color: tomato;
+    }
+  }
+  .flipped-inner-content {
+    transform: rotateY(180deg);
+  }
   @media (min-width: 320px) and (max-width: 374px) {
     height: 80px;
     flex: 1 1 80px;
