--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -1,60 +1,65 @@
 .card {
-  height: 150px;
-  flex: 1 1 150px;
-  margin: 0px 16px 16px 0px;
-  position: relative;
-  cursor: pointer;
+   height: 150px;
+   flex: 1 1 150px;
+   margin: 0px 16px 16px 0px;
+   position: relative;
+   cursor: pointer;
 
-  .card-inner-content-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: none;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .card-inner-content {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    transition: all 0.5s ease;
-    transform-style: preserve-3d;
-
-    .card-front,
-    .card-back {
-      position: absolute;
+   .card-inner-content-container {
       width: 100%;
       height: 100%;
-      background-color: white;
+      position: absolute;
+      background: none;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+   }
+   .card-inner-content {
+      position: relative;
       display: flex;
-      align-items: center;
       justify-content: center;
-      backface-visibility: hidden;
-      overflow: hidden;
-      border: 1px solid black;
-    }
-    .card-back {
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      transition: all 0.5s ease;
+      transform-style: preserve-3d;
+
+      .card-front,
+      .card-back {
+         position: absolute;
+         width: 100%;
+         height: 100%;
+         font-size: 24px;
+         background-color: white;
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         backface-visibility: hidden;
+         overflow: hidden;
+         border: 1px solid black;
+         user-select: none;
+         -moz-user-select: none;
+         -webkit-user-select: none;
+         -webkit-touch-callout: none;
+      }
+      .card-back {
+         transform: rotateY(180deg);
+         background-color: tomato;
+      }
+   }
+   .flipped-inner-content {
       transform: rotateY(180deg);
-      background-color: tomato;
-    }
-  }
-  .flipped-inner-content {
-    transform: rotateY(180deg);
-  }
-  @media (min-width: 320px) and (max-width: 374px) {
-    height: 80px;
-    flex: 1 1 80px;
-  }
-  @media (min-width: 375px) and (max-width: 480px) {
-    height: 96px;
-    flex: 1 1 96px;
-  }
-  @media (min-width: 481px) and (max-width: 767px) {
-    height: 128px;
-    flex: 1 1 128px;
-  }
+   }
+   @media (min-width: 320px) and (max-width: 374px) {
+      height: 80px;
+      flex: 1 1 80px;
+   }
+   @media (min-width: 375px) and (max-width: 480px) {
+      height: 96px;
+      flex: 1 1 96px;
+   }
+   @media (min-width: 481px) and (max-width: 767px) {
+      height: 128px;
+      flex: 1 1 128px;
+   }
 }
