--- a/src/containers/SelectModePage/styles.scss
+++ b/src/containers/SelectModePage/styles.scss
@@ -1,4 +1,11 @@
 .select-mode-page-container {
+   border: 1px solid #c3c3c3;
+   padding: 24px 0px;
+   max-width: 780px;
+   margin: 0 auto;
+   height: 100vh;
+   min-height: 320px;
+   max-height: 480px;
    .title {
       font-size: 48px;
       font-weight: bold;
@@ -9,7 +16,7 @@
       display: flex;
       justify-content: space-evenly;
       button {
-         height: 40px;
+         min-height: 40px;
          max-width: 300px;
          flex: 1;
          background-color: #19bbb3;
