feature/custom-card-matching

--- a/src/containers/CardMatchingPage/styles.scss
+++ b/src/containers/CardMatchingPage/styles.scss
@@ -1,5 +1,6 @@
 .card-matching-page-container {
    max-width: 1080px;
+   margin: 0 auto;
    .cards-list {
       display: flex;
       flex-wrap: wrap;
