--- a/src/App.scss
+++ b/src/App.scss
@@ -12,4 +12,30 @@
       padding: 8px 16px;
       margin: 24px auto;
    }
+   .start-custom-game-btn {
+      height: 40px;
+      width: 100%;
+      max-width: 300px;
+      background-color: #bb8819;
+      border: 1px solid #bb8819;
+      color: #fff;
+      font-size: 18px;
+      padding: 8px 16px;
+      margin: 24px 0px 24px 16px;
+   }
+   .created-cards-list-container {
+      display: flex;
+      flex-wrap: wrap;
+      .created-cards-row {
+         display: flex;
+         width: 160px;
+         .card {
+            height: 64px;
+            flex: 1 1 64px;
+         }
+      }
+   }
+   button {
+      cursor: pointer;
+   }
 }
