--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,9 @@
       padding: 8px 16px;
       margin: 24px 0px 24px 16px;
    }
+   .start-custom-game-btn:disabled {
+      opacity: 0.4;
+   }
    .created-cards-list-container {
       display: flex;
       flex-wrap: wrap;
