feature/image-upload-and-image-cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,7 @@
    .created-cards-list-container {
       display: flex;
       flex-wrap: wrap;
+      margin-top: 16px;
       .created-cards-row {
          display: flex;
          width: 160px;
