--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,13 @@
       margin: 24px auto;
    }
    .start-custom-game-btn {
+      margin: 24px 0px 24px 16px;
+   }
+   .start-custom-game-btn:disabled {
+      opacity: 0.4;
+   }
+   .start-custom-game-btn,
+   .play-again-btn {
       height: 40px;
       width: 100%;
       max-width: 300px;
@@ -21,22 +28,16 @@
       color: #fff;
       font-size: 18px;
       padding: 8px 16px;
-      margin: 24px 0px 24px 16px;
    }
-   .start-custom-game-btn:disabled {
-      opacity: 0.4;
+   .play-again-btn {
+      margin: 0px 16px 0px 0px;
    }
    .created-cards-list-container {
       display: flex;
       flex-wrap: wrap;
       margin-top: 16px;
-      .created-cards-row {
-         display: flex;
-         width: 160px;
-         .card {
-            height: 64px;
-            flex: 1 1 64px;
-         }
+      .card {
+         cursor: unset;
       }
    }
    button {
